--- a/examples/ProjectManagement.ipynb
+++ b/examples/ProjectManagement.ipynb
@@ -2,22 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
-    "import amt"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Tickets': {'AMT-KB-0001': {'id': 'AMT-KB-0001',\n",
+       "{'Tickets': {'AMT-KB-0001': {'UID': '9a6f7672bd0c42d38a866398d507d4d8',\n",
+       "   'id': 'AMT-KB-0001',\n",
        "   'Name': 'Create user interface to edit and view tickets',\n",
        "   'Description': 'A user interface is needed to edit, sort, and view tickets.',\n",
        "   'Closure Criteria': 'Availability of a user interface that can edit, sort and view tickets.',\n",
@@ -30,37 +41,199 @@
        "   'Status': 'Open',\n",
        "   'Comments': [{'Date': 201701061621,\n",
        "     'Comment': 'First ticket opened on AMT!!'}]}},\n",
-       " 'Documents': {'SRD': {'Fields': {'Title': 'Software Requirements Definition (SRD)',\n",
+       " 'Documents': {'SRD': {'Fields': {'UID': '734e858365c140db829c90f9e8a84410',\n",
+       "    'Title': 'Software Requirements Definition (SRD)',\n",
        "    'Short Title': 'SRD'}}},\n",
-       " 'UseCases': [{'Name': 'Do it',\n",
+       " 'UseCases': [{'UID': '697ae7e551824d4cbb5147f7dca8e481',\n",
+       "   'Name': 'Do it',\n",
        "   'Pre-Condition': 'bla bla',\n",
        "   'Flow': ['Step 1', 'Step 2'],\n",
        "   'Post-Condition': 'bla bla'},\n",
-       "  {'Name': 'Do more',\n",
+       "  {'UID': 'c3f75cbae395403a91d1d57c6d26bbd5',\n",
+       "   'Name': 'Do more',\n",
        "   'Pre-Condition': 'bla bla',\n",
        "   'Flow': ['Step 1', 'Step 2'],\n",
        "   'Post-Condition': 'bla bla'}],\n",
-       " 'Requirements': {'AMT-REQ-0001': {'uid': 'AMT-REQ-0001',\n",
+       " 'Requirements': {'AMT-REQ-0001': {'UID': 'ae5f86afd83645b4887572851eb49587',\n",
        "   'Name': 'AMT-REQ-0001',\n",
        "   'Requirement': 'AMT object trees shall consist of directories and yaml files.'},\n",
-       "  'AMT-REQ-0002': {'uid': 'AMT-REQ-0002',\n",
+       "  'AMT-REQ-0002': {'UID': '2f39e63bdbb24286b9fc91dfbd4c62d1',\n",
        "   'Name': 'AMT-REQ-0002',\n",
        "   'Requirement': 'Every AMT object shall have an unique id.'}}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pm = amt.load('pm')\n",
+    "import amt\n",
+    "amt.render('../pm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'f9967399e5d349278c2970daaa44e44e'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amt.newuid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Tickets': {'AMT-KB-0001': {'UID': '9a6f7672bd0c42d38a866398d507d4d8',\n",
+       "   'id': 'AMT-KB-0001',\n",
+       "   'Name': 'Create user interface to edit and view tickets',\n",
+       "   'Description': 'A user interface is needed to edit, sort, and view tickets.',\n",
+       "   'Closure Criteria': 'Availability of a user interface that can edit, sort and view tickets.',\n",
+       "   'Supporting Requirement': '',\n",
+       "   'Originator': 'Kenneth E. Bellock',\n",
+       "   'Assignee': 'Kenneth E. Bellock',\n",
+       "   'Priority': 'Major',\n",
+       "   'Type': 'Task',\n",
+       "   'Fix Version': 'v1.0',\n",
+       "   'Status': 'Open',\n",
+       "   'Comments': [{'Date': 201701061621,\n",
+       "     'Comment': 'First ticket opened on AMT!!'}]}},\n",
+       " 'Documents': {'SRD': {'Fields': {'UID': '734e858365c140db829c90f9e8a84410',\n",
+       "    'Title': 'Software Requirements Definition (SRD)',\n",
+       "    'Short Title': 'SRD'}}},\n",
+       " 'UseCases': [{'UID': '697ae7e551824d4cbb5147f7dca8e481',\n",
+       "   'Name': 'Do it',\n",
+       "   'Pre-Condition': 'bla bla',\n",
+       "   'Flow': ['Step 1', 'Step 2'],\n",
+       "   'Post-Condition': 'bla bla'},\n",
+       "  {'UID': 'c3f75cbae395403a91d1d57c6d26bbd5',\n",
+       "   'Name': 'Do more',\n",
+       "   'Pre-Condition': 'bla bla',\n",
+       "   'Flow': ['Step 1', 'Step 2'],\n",
+       "   'Post-Condition': 'bla bla'}],\n",
+       " 'Requirements': {'AMT-REQ-0001': {'UID': 'ae5f86afd83645b4887572851eb49587',\n",
+       "   'Name': 'AMT-REQ-0001',\n",
+       "   'Requirement': 'AMT object trees shall consist of directories and yaml files.'},\n",
+       "  'AMT-REQ-0002': {'UID': '2f39e63bdbb24286b9fc91dfbd4c62d1',\n",
+       "   'Name': 'AMT-REQ-0002',\n",
+       "   'Requirement': 'Every AMT object shall have an unique id.'}}}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pm = amt.load('../pm')\n",
     "pm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'9a6f7672bd0c42d38a866398d507d4d8': {'UID': '9a6f7672bd0c42d38a866398d507d4d8',\n",
+       "  'id': 'AMT-KB-0001',\n",
+       "  'Name': 'Create user interface to edit and view tickets',\n",
+       "  'Description': 'A user interface is needed to edit, sort, and view tickets.',\n",
+       "  'Closure Criteria': 'Availability of a user interface that can edit, sort and view tickets.',\n",
+       "  'Supporting Requirement': '',\n",
+       "  'Originator': 'Kenneth E. Bellock',\n",
+       "  'Assignee': 'Kenneth E. Bellock',\n",
+       "  'Priority': 'Major',\n",
+       "  'Type': 'Task',\n",
+       "  'Fix Version': 'v1.0',\n",
+       "  'Status': 'Open',\n",
+       "  'Comments': [{'Date': 201701061621,\n",
+       "    'Comment': 'First ticket opened on AMT!!'}]},\n",
+       " '734e858365c140db829c90f9e8a84410': {'UID': '734e858365c140db829c90f9e8a84410',\n",
+       "  'Title': 'Software Requirements Definition (SRD)',\n",
+       "  'Short Title': 'SRD'},\n",
+       " 'ae5f86afd83645b4887572851eb49587': {'UID': 'ae5f86afd83645b4887572851eb49587',\n",
+       "  'Name': 'AMT-REQ-0001',\n",
+       "  'Requirement': 'AMT object trees shall consist of directories and yaml files.'},\n",
+       " '2f39e63bdbb24286b9fc91dfbd4c62d1': {'UID': '2f39e63bdbb24286b9fc91dfbd4c62d1',\n",
+       "  'Name': 'AMT-REQ-0002',\n",
+       "  'Requirement': 'Every AMT object shall have an unique id.'}}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uid = amt.uid(pm)\n",
+    "uid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'9a6f7672bd0c42d38a866398d507d4d8': {'UID': '9a6f7672bd0c42d38a866398d507d4d8',\n",
+       "  'id': 'AMT-KB-0001',\n",
+       "  'Name': 'Create user interface to edit and view tickets',\n",
+       "  'Description': 'A user interface is needed to edit, sort, and view tickets.',\n",
+       "  'Closure Criteria': 'Availability of a user interface that can edit, sort and view tickets.',\n",
+       "  'Supporting Requirement': '',\n",
+       "  'Originator': 'Kenneth E. Bellock',\n",
+       "  'Assignee': 'Kenneth E. Bellock',\n",
+       "  'Priority': 'Major',\n",
+       "  'Type': 'Task',\n",
+       "  'Fix Version': 'v1.0',\n",
+       "  'Status': 'Open',\n",
+       "  'Comments': [{'Date': 201701061621,\n",
+       "    'Comment': 'First ticket opened on AMT!!'}]},\n",
+       " '734e858365c140db829c90f9e8a84410': {'UID': '734e858365c140db829c90f9e8a84410',\n",
+       "  'Title': 'Software Requirements Definition (SRD)',\n",
+       "  'Short Title': 'SRD'},\n",
+       " 'ae5f86afd83645b4887572851eb49587': {'UID': 'ae5f86afd83645b4887572851eb49587',\n",
+       "  'Name': 'AMT-REQ-0001',\n",
+       "  'Requirement': 'AMT object trees shall consist of directories and yaml files.'},\n",
+       " '2f39e63bdbb24286b9fc91dfbd4c62d1': {'UID': '2f39e63bdbb24286b9fc91dfbd4c62d1',\n",
+       "  'Name': 'AMT-REQ-0002',\n",
+       "  'Requirement': 'Every AMT object shall have an unique id.'}}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uid = amt.uid('../pm')\n",
+    "uid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +242,7 @@
        "dict_keys(['Tickets', 'Documents', 'UseCases', 'Requirements'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,26 +253,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Ticket:  a\n",
-      "Name:  b\n"
+      "Ticket:  bla\n",
+      "Name:  bla\n"
      ]
     }
    ],
    "source": [
-    "ticket = input('Ticket: ')\n",
-    "name = input('Name: ')"
+    "# ticket = input('Ticket: ')\n",
+    "# name = input('Name: ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +327,7 @@
        "1  [Step 1, Step 2]  Do more        bla bla       bla bla"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,14 +355,14 @@
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
       "\u001b[0;32m/local/bellockk/Development/amtool/amt/save/save.py\u001b[0m in \u001b[0;36m_d\u001b[0;34m(pth, data, verbose)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m             \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf_obj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m                 \u001b[0mf_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault_flow_style\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/tmp/tmpz193sbcl/pm/Tickets/AMT-KB-0001.yaml'",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/tmp/tmpcro9c5ba/../pm/Tickets/AMT-KB-0001.yaml'",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[0;32m/local/bellockk/Development/amtool/amt/save/save.py\u001b[0m in \u001b[0;36m_d\u001b[0;34m(pth, data, verbose)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m             \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf_obj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m                 \u001b[0mf_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault_flow_style\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute '_file'",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-c0ce25f94292>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mamt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'delete/pm'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-6-c0ce25f94292>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mamt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'delete/pm'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/local/bellockk/Development/amtool/amt/save/save.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(pth, data, header, footer, verbose)\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m         \u001b[0mtmp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtempfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdtemp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m         \u001b[0m_d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m         \u001b[0m_d2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdircmp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/local/bellockk/Development/amtool/amt/save/save.py\u001b[0m in \u001b[0;36m_d\u001b[0;34m(pth, data, verbose)\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewpth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m                 \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewpth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m             \u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnewpth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/local/bellockk/Development/amtool/amt/save/save.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(pth, data, header, footer, verbose)\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m         \u001b[0mtmp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtempfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdtemp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m         \u001b[0m_d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m         \u001b[0m_d2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdircmp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmtree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
